--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Jeff Will">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="content/css/style.css">
     <link rel="icon" type="image/png" href="images/t.png">
     <title>Travel Blog</title>
 </head>
